# OpenHLM

./: .gitattributes  .gitignore  NOTICE  README.md
assets/: head_camera_holder.stl  wrist_camera_holder.stl
src/GR00T-WholeBodyControl4OpenHLM/: .gitignore  pyproject.toml  robot_data_collection.md
src/GR00T-WholeBodyControl4OpenHLM/gear_sonic/: pyproject.toml
src/GR00T-WholeBodyControl4OpenHLM/install_scripts/: install_pico.sh
src/GR00T-WholeBodyControl4OpenHLM/openpi-eval/: main.py  sonic_g1_env.py
src/GR00T-WholeBodyControl4OpenHLM/scripts/: data_record.sh  deploy_stream.sh  launch_data_collection.sh  main.sh  pico_stream_pure.sh  run_camera_teleop.sh
src/HuMI4OpenHLM/: .gitignore  README.md  pyproject.toml
src/HuMI4OpenHLM/configs/htc/: pose_mapping.yaml
src/HuMI4OpenHLM/configs/prompts/: fruits_shelf.txt
src/HuMI4OpenHLM/g1_description/: README.md  g1_29dof.xml  g1_29dof_rev_1_0.urdf  g1_29dof_rev_1_0.xml  g1_29dof_rev_1_0_armature1e-3.xml
src/HuMI4OpenHLM/g1_description/meshes/: left_umi_gripper.STL
src/HuMI4OpenHLM/src/ikumi/: __init__.py  config.py  episodes.py  keypoints.py  solution.py  solver.py  utils.py  viser_visualizer.py
src/HuMI4OpenHLM/src/processing/: __init__.py  cv_util.py  dataset.py  interpolation_util.py  robot.py  trajectory.py  video.py
src/HuMI4OpenHLM/src/scripts/: export_recording.py  offline_ik.py  online_ik_viewer.py  replay.py  run_processing_pipeline.py  trim.py
src/HuMI4OpenHLM/src/scripts/processing_pipeline/: backfill_final_undistort.py  batch_calibrate_tracker_camera_timestamp.py  batch_detect_aruco.py  calibrate_gripper_range.py  calibrate_tracker_camera_timestamp.py  detect_aruco.py  export_trajectories_to_pkl.py  extract_gopro_gyro.py  generate_dataset_plan.py  generate_final.py  group_demos.py  match_camera_and_trajectory.py  run_calibrations.py  visualize_final.py
src/openpi4OpenHLM/: .gitignore  inference.md  pipe.sh  pyproject.toml
(+40 files in other folders)
